unpackaged/main/default/objects/nbavs__DialListAdministrator__c/nbavs__DialListAdministrator__c.object-meta.xml
<CustomObject>
    <label>Dial List Administrator</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial List Administrators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>