unpackaged/main/default/objects/nbavs__DialListAdministrator__c/fields/nbavs__DialList__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DialList__c</fullName>
    <label>Dial List</label>
    <referenceTo>nbavs__DialList__c</referenceTo>
    <relationshipLabel>Dial List Administrators</relationshipLabel>
    <relationshipName>DialListAdministrators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>