unpackaged/main/default/objects/nbavs__DialListAdministrator__c/fields/nbavs__Owner__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Owner__c</fullName>
    <formula>IF(CreatedById ==   nbavs__User__r.nbavs__User__r.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Checkbox</type>
</CustomField>