unpackaged/main/default/objects/nbavs__DialListAdministrator__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <label>Natterbox User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dial List Administrator must have Natterbox CTI License</errorMessage>
        <filterItems>
            <field>nbavs__User__c.nbavs__CTI__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Dial List Administrator must have Natterbox CTI License</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Dial List Administrators</relationshipLabel>
    <relationshipName>DialListAdministrators</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>